所有Double强转优化，加入M60设备，处理所有非下推单据生成单据编码逻辑，

--- a/app/src/main/res/layout/activity_purchase_in_storage.xml
+++ b/app/src/main/res/layout/activity_purchase_in_storage.xml
@@ -145,7 +145,7 @@
                         android:orientation="horizontal">
 
 
-                        <Spinner
+                        <com.fangzuo.assist.widget.SpinnerStorage
                             android:id="@+id/sp_which_storage"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
