--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -183,9 +183,8 @@
 
     </RelativeLayout>
 
-  <!--  <android.support.design.widget.CoordinatorLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:id="@+id/container"
         android:layout_height="match_parent"></android.support.design.widget.CoordinatorLayout>
--->
 </RelativeLayout>
