--- a/app/src/main/res/layout/activity_ip_port.xml
+++ b/app/src/main/res/layout/activity_ip_port.xml
@@ -69,18 +69,35 @@
         android:gravity="center_horizontal" />
     </LinearLayout>
     <TextView
-        android:layout_above="@id/btn_save"
+        android:layout_above="@id/ll_btn"
         android:id="@+id/tv_endtime"
         android:textSize="10sp"
         android:textColor="#cfa19e9e"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <Button
-        android:layout_alignParentBottom="true"
+    <LinearLayout
+        android:id="@+id/ll_btn"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/btn_login"
-        android:text="保存"
-        android:id="@+id/btn_save"/>
+        android:layout_alignParentBottom="true"
+        >
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:background="#f92e2e"
+            android:text="登出"
+            android:id="@+id/btn_loginout"/>
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="8"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_login"
+            android:text="保存"
+            android:id="@+id/btn_save"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
