--- a/app/src/main/res/layout/ipport.xml
+++ b/app/src/main/res/layout/ipport.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:padding="7dp"
+    android:layout_marginTop="15dp"
     android:layout_height="match_parent">
 
     <TextView
@@ -11,9 +13,11 @@
         android:textColor="@android:color/black"/>
     <EditText
         android:id="@+id/ed_ip"
+        android:paddingLeft="10dp"
         android:layout_width="match_parent"
         android:singleLine="true"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:background="@drawable/bg_edittext_selector"
         android:textColorHint="@color/dividerLine"
         android:hint="输入IP"/>
     <TextView
@@ -25,9 +29,11 @@
     <EditText
         android:singleLine="true"
         android:id="@+id/ed_port"
+        android:paddingLeft="10dp"
+        android:background="@drawable/bg_edittext_selector"
         android:textColorHint="@color/dividerLine"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:hint="输入端口"/>
 
 </LinearLayout>
