更改登陆设置页面

--- a/app/src/main/res/layout/activity_setting_menu.xml
+++ b/app/src/main/res/layout/activity_setting_menu.xml
@@ -1,20 +1,281 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.fangzuo.assist.Activity.SettingMenuActivity">
+    android:orientation="vertical">
+    <include layout="@layout/top_bar"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:text="网络配置"
+                android:textSize="12sp"
+                android:layout_marginLeft="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <android.support.v7.widget.CardView
+                android:layout_margin="5dp"
+                app:cardCornerRadius="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:background="@drawable/bg_l_selector"
+                        android:id="@+id/ll_service"
+                        android:orientation="horizontal"
+                        android:layout_margin="5dp"
+                        android:paddingLeft="15dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp">
+                        <ImageView
+                            android:background="@mipmap/tomcat"
+                            android:layout_gravity="center"
+                            android:layout_width="30dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_height="30dp"/>
+                        <TextView
+                            android:text="服务器配置"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="88dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"/>
+                        <TextView
+                            android:layout_gravity="center|right"
+                            android:layout_marginRight="5dp"
+                            android:gravity="right"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="12sp"/>
+                    </LinearLayout>
+                    <include layout="@layout/line_heng"/>
+                    <LinearLayout
+                        android:background="@drawable/bg_l_selector"
+                        android:id="@+id/ll_download"
+                        android:orientation="horizontal"
+                        android:layout_margin="5dp"
+                        android:paddingLeft="15dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp">
+                        <ImageView
+                            android:background="@mipmap/download"
+                            android:layout_gravity="center"
+                            android:layout_width="30dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_height="30dp"/>
+                        <TextView
+                            android:text="下载配置"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="88dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"/>
+                        <TextView
+                            android:layout_gravity="center|right"
+                            android:layout_marginRight="5dp"
+                            android:gravity="right"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="12sp"/>
+                    </LinearLayout>
+                    <include layout="@layout/line_heng"/>
+                    <LinearLayout
+                        android:background="@drawable/bg_l_selector"
+                        android:id="@+id/ll_test"
+                        android:orientation="horizontal"
+                        android:layout_margin="5dp"
+                        android:paddingLeft="15dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp">
+                        <ImageView
+                            android:background="@mipmap/test"
+                            android:layout_gravity="center"
+                            android:layout_width="30dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_height="30dp"/>
+                        <TextView
+                            android:text="网络测试"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="88dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"/>
+                        <TextView
+                            android:layout_gravity="center|right"
+                            android:layout_marginRight="5dp"
+                            android:gravity="right"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="12sp"/>
+                    </LinearLayout>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <TextView
+                android:text="本地配置"
+                android:textSize="12sp"
+                android:layout_marginLeft="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <android.support.v7.widget.CardView
+                android:layout_margin="5dp"
+                app:cardCornerRadius="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:background="@drawable/bg_l_selector"
+                        android:id="@+id/ll_wifi"
+                        android:orientation="horizontal"
+                        android:layout_margin="5dp"
+                        android:paddingLeft="15dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp">
+                        <ImageView
+                            android:background="@mipmap/wifi"
+                            android:layout_gravity="center"
+                            android:layout_width="30dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_height="30dp"/>
+                        <TextView
+                            android:text="WIFI设置"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="88dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"/>
+                        <TextView
+                            android:layout_gravity="center|right"
+                            android:layout_marginRight="5dp"
+                            android:gravity="right"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="12sp"/>
+                    </LinearLayout>
+                    <include layout="@layout/line_heng"/>
+                    <LinearLayout
+                        android:background="@drawable/bg_l_selector"
+                        android:id="@+id/ll_voice"
+                        android:orientation="horizontal"
+                        android:layout_margin="5dp"
+                        android:paddingLeft="15dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp">
+                        <ImageView
+                            android:background="@mipmap/sound"
+                            android:layout_gravity="center"
+                            android:layout_width="30dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_height="30dp"/>
+                        <TextView
+                            android:text="声音设置"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="88dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"/>
+                        <TextView
+                            android:layout_gravity="center|right"
+                            android:layout_marginRight="5dp"
+                            android:gravity="right"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="12sp"/>
+                    </LinearLayout>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+            <TextView
+                android:text="版本信息"
+                android:textSize="12sp"
+                android:layout_marginLeft="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <android.support.v7.widget.CardView
+                android:layout_margin="5dp"
+                app:cardCornerRadius="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:background="@drawable/bg_l_selector"
+                        android:id="@+id/ll_update"
+                        android:orientation="horizontal"
+                        android:layout_margin="5dp"
+                        android:paddingLeft="15dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp">
+                        <ImageView
+                            android:background="@mipmap/getnewversion"
+                            android:layout_gravity="center"
+                            android:layout_width="30dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_height="30dp"/>
+                        <TextView
+                            android:id="@+id/tv_version"
+                            android:text="更新版本"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="88dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"/>
+                        <LinearLayout
+                            android:orientation="vertical"
+                            android:layout_gravity="center|right"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                android:id="@+id/tv_ver_app"
+                                android:layout_marginRight="5dp"
+                                android:gravity="right"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textSize="12sp"/>
+                            <TextView
+                                android:id="@+id/tv_ver_web"
+                                android:layout_marginRight="5dp"
+                                android:gravity="right"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textSize="12sp"/>
+                        </LinearLayout>
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
+
+    </ScrollView>
+
+
+
+
     <!-- 静态加载Fragment -->
-    <fragment
-        android:id="@+id/left_fragment"
-        android:name="com.fangzuo.assist.Fragment.SettingFragment"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1" />
+    <!--<fragment-->
+    <!--android:id="@+id/left_fragment"-->
+    <!--android:name="com.fangzuo.assist.cloud.Fragment.SettingFragment"-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_weight="1" />-->
     <!--<ListView-->
-        <!--android:id="@+id/lv_setting"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"/>-->
+    <!--android:id="@+id/lv_setting"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"/>-->
 
 </LinearLayout>
